Clean up Java compilation warnings